Drop 'v1' from predict route.

--- a/api_server/templates/predict_form.html
+++ b/api_server/templates/predict_form.html
@@ -35,7 +35,7 @@
         <div class="header">
             <h2 class="text-muted">Swedish Parliament Motion Title Generator</h2>
         </div>
-        <form role="form" method="post" action="/v1/predict">
+        <form role="form" method="post" action="/predict">
             <!-- Text input-->
             <div class="form-group">
                 <label for="txtPost">Enter motion text</label>
